--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/facebook/react"
+    "url": "https://github.com/HenriJ/careless"
   },
   "dependencies": {
     "commoner": "^0.10.0",
