--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "careless",
-  "description": "A react fork for static XML generation",
-  "version": "0.0.3",
+  "description": "A jsx/react fork for static XML generation",
+  "version": "0.0.4",
   "keywords": [
     "react",
     "jsx",
