--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "commoner": "^0.10.0",
     "jstransform": "^8.0.0",
     "pretty-data": "^0.40.0",
-    "through2": "^0.6.3",
+    "through2": "^0.6.3"
   },
   "devDependencies": {
     "del": "^1.1.1",
